--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "make",
+	"postCreateCommand": "make tilt && make",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
