--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.20'
       - uses: actions/cache@v3
         with:
-          path: ~/go/bin
+          path: /home/runner/go/bin
           key: ${{ runner.os }}-${{ hashFiles('**/Makefile') }}
       - run: make
       - run: git diff --exit-code
