--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version-file: './go.mod'
       - run: make
       - run: git diff --exit-code
       - uses: codecov/codecov-action@v3
