--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -20,6 +20,6 @@ jobs:
         with:
            path: ~/go/bin
            key: ${{ runner.os }}-${{ hashFiles('**/Makefile') }}
-      - run: make
+      - run: make all
       - run: git diff --exit-code
       - uses: codecov/codecov-action@v3
