--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/cache@v3
         with:
            path: ~/go/bin
-           key: ${{ runner.os }}-${{ hashFiles('**/Makefile') }}
+           key: ${{ runner.os }}-${{ hashFiles('**/build/.tools') }}
       - run: make all
       - run: git diff --exit-code
       - uses: codecov/codecov-action@v3
