--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -23,3 +23,11 @@ jobs:
       - run: make all
       - run: git diff --exit-code
       - uses: codecov/codecov-action@v3
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: make build (ko.local)
+        run: make build
+        env:
+          KO_DOCKER_REPO: ko.local
