--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -27,6 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: './go.mod'
       - name: make build (ko.local)
         run: make build
         env:
