--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -12,6 +12,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,13 +23,19 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: './go.mod'
-      - uses: actions/cache@v3
-        with:
-           path: ~/go/bin
-           key: ${{ runner.os }}-${{ hashFiles('**/build/.tools') }}
-      - run: make all
+      - run: make test
       - run: git diff --exit-code
       - uses: codecov/codecov-action@v3
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: './go.mod'
+      - uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
   build:
     runs-on: ubuntu-latest
     steps:
