--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -33,6 +33,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: './go.mod'
+          cache: false
       - uses: golangci/golangci-lint-action@v3
         with:
           version: latest
