--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -37,6 +37,7 @@ jobs:
       - uses: golangci/golangci-lint-action@v3
         with:
           version: latest
+          args: --timeout=5m
   build:
     runs-on: ubuntu-latest
     steps:
