--- a/web/2pf23console/package.json
+++ b/web/2pf23console/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "echo todo",
+    "ci": "npm run format && npm run lint && npm run test"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
