--- a/.github/workflows/ts.yaml
+++ b/.github/workflows/ts.yaml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        node-version: 20
+        with:
+          node-version: 20
       - run: npm ci
         working-directory: web/2pf23console
       - run: git diff --exit-code
