--- a/web/2pf23console/package.json
+++ b/web/2pf23console/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "test": "npm run format && npm run lint"
+    "test": "npm run format && npm run lint && jest"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -27,6 +27,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "prettier": "2.8.8",
+    "ts-jest": "^29.1.1"
   }
 }
